miniextendr-macros/tests/ui/impl_method_unknown_top_level_attr.stderr
error: unknown attribute; expected one of: env, r6, s3, s4, s7, vctrs, defaults, unsafe, check_interrupt, coerce, no_coerce, rng, unwrap_in_r, error_in_r, no_error_in_r, as, lifecycle
 --> tests/ui/impl_method_unknown_top_level_attr.rs:7:19
  |
7 |     #[miniextendr(typo_option)]
  |                   ^^^^^^^^^^^
